Move Java preview features and relevant test suites to Java 20